# ime-cursor-indicator

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  KNOWLEDGE.md  MIGRATION.md  README.md  REVIEW_INSTALL.md  SPEC.md  TODO.md  config.toml.example  ime-cursor-indicator.desktop.example  ime_cursor_indicator.py  install.sh
python/: README.md
rust/: Cargo.toml
rust/src/: config.rs  ibus.rs  label.rs  main.rs  overlay.rs  tray.rs
